<resources>
    <string name="app_name">Currency App</string>
    <string name="abd_dolari">ABD DOLARI</string>
    <string name="avustralya_dolari">AVUSTRALYA DOLARI</string>
    <string name="dan_marka_kronu">DANİMARKA KRONU</string>
    <string name="euro">EURO</string>
    <string name="ng_l_z_sterl_n">İNGİLİZ STERLİNİ</string>
    <string name="sv_re_frangi">İSVİÇRE FRANGI</string>
    <string name="sve_kronu">İSVEÇ KRONU</string>
    <string name="kanada_dolari">KANADA DOLARI</string>
    <string name="kuveyt_d_nari">KUVEYT DİNARI</string>
    <string name="norve_kronu">NORVEÇ KRONU</string>
    <string name="al_s">alıs</string>
    <string name="bankasat_s">bankasatıs</string>
    <string name="s_p_sati">S.P SATIŞ</string>
    <string name="sat_s">satıs</string>
    <string name="textview">TextView</string>
    <string name="bankaal_s">bankaAlıs</string>
    <string name="s_p_ali">S.P ALIŞ</string>
    <string name="banka_alis">BANKA ALIS</string>
    <string name="banka_satis">BANKA SATIS</string>
    <string name="para_b_r_mler">PARA BİRİMLERİ</string>
    <string name="saat">saat</string>
    <string name="tarih">Tarih</string>
</resources>